Add css files for header

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
 		<meta charset="UTF-8">
 		<title>TREEHOUSE</title>
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link rel="stylesheet" href="static/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
 	<body>
         <header class="header">
             <div class="header__logo">
-                <img src="img/header/leaf.png" alt="">
-                <h1>Treehouse</h1>
+                <img class="logo__pic" src="img/header/leaf.png" alt="">
+                <h1 class="logo__text">Treehouse</h1>
             </div>
             <nav>
                 <ul>
