--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	<body>
         <header class="header">
             <div class="header__logo">
-                <img class="logo__pic" src="img/header/leaf.png" alt="">
+                <div class="logo__pic">
+                    <img src="img/header/leaf.png" alt="">
+                </div>
                 <h1 class="logo__text">Treehouse</h1>
             </div>
             <nav>
