Separate logo and menu as separate blocks

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 	<body>
         <header class="header">
-            <div class="header__logo">
+            <div class="logo">
                 <div class="logo__pic">
                     <img src="img/header/leaf.png" alt="">
                 </div>
                 <h1 class="logo__text">Treehouse</h1>
             </div>
-            <nav>
+            <nav class="menu">
                 <ul>
-                    <li><a href="#" title="Home page">Home</a></li>
-                    <li><a href="#" title="About Treehouse">About</a></li>
-                    <li><a href="#" title="Read our Blog">Blog</a></li>
-                    <li><a href="#" title="See our Projects">Portfolio</a></li>
-                    <li><a href="#" title="Contact us">Contact</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#" title="Home page">Home</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#" title="About Treehouse">About</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#" title="Read our Blog">Blog</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#" title="See our Projects">Portfolio</a></li>
+                    <li class="menu__item"><a class="menu__link"  href="#" title="Contact us">Contact</a></li>
                 </ul>
             </nav>
         </header>
