Set header as sticky at top

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
 	<body>
         <header class="header">
+            <div class="header__wrapper">
+            <a href="#" title="Top Page">
             <div class="logo">
                 <div class="logo__pic">
                     <img src="img/header/leaf.png" alt="">
                 </div>
                 <h1 class="logo__text">Treehouse</h1>
             </div>
+            </a>
             <nav class="menu">
                 <ul>
                     <li class="menu__item"><a class="menu__link" href="#" title="Home page">Home</a></li>
@@ -26,6 +29,7 @@
                     <li class="menu__item"><a class="menu__link"  href="#" title="Contact us">Contact</a></li>
                 </ul>
             </nav>
+            </div>
         </header>
         
         <main>
