--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>TREEHOUSE</title>
-        <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
         <link rel="stylesheet" href="static/main.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
@@ -34,9 +34,11 @@
         
         <main>
         <section class="banner">
-            <h2>Creative Digital Solutions</h2>
-            <p>Proin iaculis purus consequat sem cure. </p>
-            <button>View Portfolio</button>
+            <div class="banner__container">
+                <h2 class="banner__title">Creative Digital Solutions</h2>
+                <p class="banner__subtitle">Proin iaculis purus consequat sem cure. </p>
+                <button class="banner__button button">View Portfolio</button>
+            </div>
         </section>
         
         <section class="services">
