Style button for 'contact' section

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             
         <section class="contact">
             <h2 class="contact__header">Ready to talk about your next project?</h2>
-            <button class="contact__button">Contact us</button>
+            <button class="button--rectangle">Contact us</button>
         </section>
             
         <section class="partners">
