Change selection color

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <li class="menu__item"><a class="menu__link" href="#" title="See our Projects">Portfolio</a></li>
                     <li class="menu__item"><a class="menu__link"  href="#" title="Contact us">Contact</a></li>
                 </ul>
-                <button type="button" title="Open Menu">
-                
+                <button type="button" class="button--menu" title="Open Menu">
+                    Menu
                 </button>
             </nav>
             </div>
