Style header for mobile first

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             </div>
             </a>
             <nav class="menu">
-                <ul>
+                <ul class="menu__list">
                     <li class="menu__item"><a class="menu__link" href="#" title="Home page">Home</a></li>
                     <li class="menu__item"><a class="menu__link" href="#" title="About Treehouse">About</a></li>
                     <li class="menu__item"><a class="menu__link" href="#" title="Read our Blog">Blog</a></li>
                     <li class="menu__item"><a class="menu__link" href="#" title="See our Projects">Portfolio</a></li>
                     <li class="menu__item"><a class="menu__link"  href="#" title="Contact us">Contact</a></li>
                 </ul>
-                <button type="button" class="button--menu" title="Open Menu">
+                <button type="button" class="menu__button button--menu" title="Open Menu">
                     Menu
                 </button>
             </nav>
