Style button for menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
                     <li class="menu__item"><a class="menu__link"  href="#" title="Contact us">Contact</a></li>
                 </ul>
                 <button type="button" class="menu__button button--menu" title="Open Menu">
-                    Menu
+                    <svg width="35" height="20" xmlns="http://www.w3.org/2000/svg" version="1.1">
+    <line x1="3" x2="20" y1="5" y2="5" stroke="#777777" stroke-width="3" stroke-linecap="round"/>
+    <line x1="3" x2="20" y1="15" y2="15" stroke="#777777" stroke-width="3" stroke-linecap="round"/>
+</svg><span>Menu</span><svg width="35" height="20" xmlns="http://www.w3.org/2000/svg" version="1.1">
+    <line x1="3" x2="20" y1="5" y2="5" stroke="#777777" stroke-width="3" stroke-linecap="round"/>
+    <line x1="3" x2="20" y1="15" y2="15" stroke="#777777" stroke-width="3" stroke-linecap="round"/>
+</svg>
                 </button>
             </nav>
             </div>
@@ -48,26 +54,28 @@
         <section class="services">
             <h2 class="services__header">Professional Services</h2>
             <p class="services__description">Proin iaculis purus consequat sem cure</p>
-            <div class="services__service">
-                <img src="img/services/icon-heart.png" alt="">
-                <h3 class="service__header">Beautiful Designs</h3>
-                <p class="service__description">Proin iaculis purus consequat sem cure<br>
-                    digni ssim. Donec porttitora entum suscipit<br>
-                    aenean rhoncus posuere odio in tincidunt.</p>
-            </div>
-            <div class="services__service">
-                <img src="img/services/icon-mobile.png" alt="">
-                <h3 class="service__header">Responsive Design</h3>
-                <p class="service__description">Proin iaculis purus consequat sem cure<br>
-                    digni ssim. Donec porttitora entum suscipit<br>
-                    aenean rhoncus posuere odio in tincidunt.</p>
-            </div>
-            <div class="services__service">
-                <img src="img/services/icon-graph.png" alt="">
-                <h3 class="service__header">Marketing Tools</h3>
-                <p class="service__description">Proin iaculis purus consequat sem cure<br>
-                    digni ssim. Donec porttitora entum suscipit<br>
-                    aenean rhoncus posuere odio in tincidunt.</p>
+            <div class="services__items-wrapper">
+                <div class="services__item">
+                    <img src="img/services/icon-heart.png" alt="">
+                    <h3 class="service__header">Beautiful Designs</h3>
+                    <p class="service__description">Proin iaculis purus consequat sem cure<br>
+                        digni ssim. Donec porttitora entum suscipit<br>
+                        aenean rhoncus posuere odio in tincidunt.</p>
+                </div>
+                <div class="services__item">
+                    <img src="img/services/icon-mobile.png" alt="">
+                    <h3 class="service__header">Responsive Design</h3>
+                    <p class="service__description">Proin iaculis purus consequat sem cure<br>
+                        digni ssim. Donec porttitora entum suscipit<br>
+                        aenean rhoncus posuere odio in tincidunt.</p>
+                </div>
+                <div class="services__item">
+                    <img src="img/services/icon-graph.png" alt="">
+                    <h3 class="service__header">Marketing Tools</h3>
+                    <p class="service__description">Proin iaculis purus consequat sem cure<br>
+                        digni ssim. Donec porttitora entum suscipit<br>
+                        aenean rhoncus posuere odio in tincidunt.</p>
+                </div>
             </div>
         </section>
         
