--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
                     <li class="menu__item"><a class="menu__link" href="#" title="See our Projects">Portfolio</a></li>
                     <li class="menu__item"><a class="menu__link"  href="#" title="Contact us">Contact</a></li>
                 </ul>
-                <button type="button" class="menu__button button--menu" title="Open Menu">
-                    <svg width="35" height="20" xmlns="http://www.w3.org/2000/svg" version="1.1">
-    <line x1="3" x2="20" y1="5" y2="5" stroke="#777777" stroke-width="3" stroke-linecap="round"/>
-    <line x1="3" x2="20" y1="15" y2="15" stroke="#777777" stroke-width="3" stroke-linecap="round"/>
-</svg><span>Menu</span><svg width="35" height="20" xmlns="http://www.w3.org/2000/svg" version="1.1">
-    <line x1="3" x2="20" y1="5" y2="5" stroke="#777777" stroke-width="3" stroke-linecap="round"/>
-    <line x1="3" x2="20" y1="15" y2="15" stroke="#777777" stroke-width="3" stroke-linecap="round"/>
-</svg>
+                <button type="button" class="menu__button button--menu button--close" title="Open Menu">
+                    <span>Menu</span>
+                     <svg class="button__icon" width="26" height="25" xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <g class="icon__open" stroke="#777777" stroke-width="3"stroke-linejoin="miter" stroke-linecap="butt" fill="none">
+    <line x1="12" x2="12" y1="3" y2="20"/>
+    <polyline points="4 11 12 20 20 11"/>
+  </g>
+  <g class="icon__close" stroke="#777777"  stroke-width="3" >
+    <line x1="3" x2="21" y1="3" y2="21" />
+    <line x1="3" x2="21" y1="21" y2="3" />
+  </g>
+ </svg>
                 </button>
             </nav>
             </div>
@@ -229,5 +233,6 @@
                 </div>
             </section>
         </footer>
+        <script src="src/blocks/button/--menu/button--menu.js"></script>
 	</body>
 </html>
