--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	</head>
 
 	<body>
+        <div class="container">
         <header class="header">
             <div class="header__wrapper">
             <a href="#" title="Top Page">
@@ -233,6 +234,7 @@
                 </div>
             </section>
         </footer>
+        </div>
         <script src="src/blocks/button/--menu/button--menu.js"></script>
 	</body>
 </html>
