Exchange png to svg in services section

--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
             <p class="services__description">Proin iaculis purus consequat sem cure</p>
             <div class="services__items-wrapper">
                 <div class="services__item">
-                    <img src="img/services/icon-heart.png" alt="">
+                    <img src="img/services/icon-heart.svg" alt="">
                     <h3 class="service__header">Beautiful Designs</h3>
                     <p class="service__description">Proin iaculis purus consequat sem cure<br>
                         digni ssim. Donec porttitora entum suscipit<br>
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </div>
                 <div class="services__item">
-                    <img src="img/services/icon-mobile.png" alt="">
+                    <img src="img/services/icon-mobile.svg" alt="">
                     <h3 class="service__header">Responsive Design</h3>
                     <p class="service__description">Proin iaculis purus consequat sem cure<br>
                         digni ssim. Donec porttitora entum suscipit<br>
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </div>
                 <div class="services__item">
-                    <img src="img/services/icon-graph.png" alt="">
+                    <img src="img/services/icon-graph.svg" alt="">
                     <h3 class="service__header">Marketing Tools</h3>
                     <p class="service__description">Proin iaculis purus consequat sem cure<br>
                         digni ssim. Donec porttitora entum suscipit<br>
