Style Services section subtitle

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
         <section class="services">
             <h2 class="services__header">Professional Services</h2>
-            <p class="services__description">Proin iaculis purus consequat sem cure</p>
+            <p class="services__subtitle">Proin iaculis purus consequat sem cure</p>
             <div class="services__items-wrapper">
                 <div class="services__item">
                     <img src="img/services/icon-heart.svg" alt="">
