Style list points as checkmarks

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h2 class="offer__header">Just relax & let us do the heavy lifting</h2>
             <p>Proin iaculis purus consequat sem cure  digni ssim. Donec</p>
             <p>porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
-            <ul>
+            <ul class="offer__list">
                 <li class="offer__item">Initial Setup & Customizations</li>
                 <li class="offer__item">Regular Updates</li>
                 <li class="offer__item">Round The Clock Support</li>
