--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </section>
         
         <section class="services">
+            <div class="services__wrapper">
             <h2 class="services__header">Professional Services</h2>
             <p class="services__subtitle">Proin iaculis purus consequat sem cure</p>
             <div class="services__items-wrapper">
@@ -80,6 +81,7 @@
                         digni ssim. Donec porttitora entum suscipit<br>
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </div>
+            </div>
             </div>
         </section>
         
