--- a/index.html
+++ b/index.html
@@ -236,5 +236,6 @@
             </section>
         </footer>
         <script src="src/blocks/button/--menu/button--menu.js"></script>
+        <script src="src/blocks/menu/__item/menu__item.js"></script>
 	</body>
 </html>
