Change class name from 'green' to section name

--- a/index.html
+++ b/index.html
@@ -63,30 +63,30 @@
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure</p>
             </div>
             <div class="l-features-wrapper">
-                <div class="services__item item">
-                    <div class="item__icon">
+                <div class="feature">
+                    <div class="feature__icon">
                         <img src="img/services/icon-heart.svg" alt="">
                     </div>
-                    <h3 class="item__title">Beautiful Designs</h3>
-                    <p class="item__description">Proin iaculis purus consequat sem cure<br>
+                    <h3 class="feature__title">Beautiful Designs</h3>
+                    <p class="feature__description">Proin iaculis purus consequat sem cure<br>
                         digni ssim. Donec porttitora entum suscipit<br>
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </div>
-                <div class="services__item item">
-                    <div class="item__icon">
+                <div class="feature">
+                    <div class="feature__icon">
                         <img src="img/services/icon-mobile.svg" alt="">
                     </div>
-                    <h3 class="item__title">Responsive Web</h3>
-                    <p class="item__description">Proin iaculis purus consequat sem cure<br>
+                    <h3 class="feature__title">Responsive Web</h3>
+                    <p class="feature__description">Proin iaculis purus consequat sem cure<br>
                         digni ssim. Donec porttitora entum suscipit<br>
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </div>
-                <div class="services__item item">
-                    <div class="item__icon">
+                <div class="feature">
+                    <div class="feature__icon">
                         <img src="img/services/icon-graph.svg" alt="">
                     </div>
-                    <h3 class="item__title">Marketing Tools</h3>
-                    <p class="item__description">Proin iaculis purus consequat sem cure<br>
+                    <h3 class="feature__title">Marketing Tools</h3>
+                    <p class="feature__description">Proin iaculis purus consequat sem cure<br>
                         digni ssim. Donec porttitora entum suscipit<br>
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </div>
@@ -138,24 +138,24 @@
                 <h2 class="heading__title">Culture & values</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat cure. </p>
                 <div class="l-features-wrapper">
-                    <div class="values__value">
+                    <div class="feature">
                         <img src="img/values/icon-music.png" alt="">
-                        <h3 class="item__title">Work-life Balance</h3>
-                        <p class="item__description">Proin iaculis purus consequat sem cure<br> 
+                        <h3 class="feature__title">Work-life Balance</h3>
+                        <p class="feature__description">Proin iaculis purus consequat sem cure<br> 
                             digni ssim. Donec porttitora entum suscipit <br>
                             aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="values__value">
+                    <div class="feature">
                         <img src="img/values/icon-graph.png" alt="">
-                        <h3 class="item__title">Quality Over Quantity</h3>
-                        <p class="item__description">Proin iaculis purus consequat sem cure<br> 
+                        <h3 class="feature__title">Quality Over Quantity</h3>
+                        <p class="feature__description">Proin iaculis purus consequat sem cure<br> 
                             digni ssim. Donec porttitora entum suscipit <br>
                             aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
-                    <div class="values__value">
+                    <div class="feature">
                         <img src="img/values/icon-star.png" alt="">
-                        <h3 class="item__title">Deliver Excelence</h3>
-                        <p class="item__description">Proin iaculis purus consequat sem cure <br>
+                        <h3 class="feature__title">Deliver Excelence</h3>
+                        <p class="feature__description">Proin iaculis purus consequat sem cure <br>
                             digni ssim. Donec porttitora entum suscipit <br>
                             aenean rhoncus posuere odio in tincidunt.</p>
                     </div>
@@ -178,7 +178,7 @@
             </blockquote>
         </section>
             
-        <section class="l-section l-section--green">
+        <section class="l-section l-section--contact">
             <h2 class="heading__title heading__title--white">Ready to talk about your next project?</h2>
             <button type="button" class="button--rectangle">Contact us</button>
         </section>
@@ -191,56 +191,60 @@
         </section>
         </main>
         <footer>
-            <section class="links">
-                <div class="links__contact">
-                    <h2 class="contact__header">Contact us</h2>
-                    <div class="contact__item">
-                        <img src="img/icons/location.png" alt="">
-                        <p>55 Main St.<br>
-                            Toronto, ON<br>
-                            M1H 3A5</p>
+            <section class="l-section l-section--top-footer">
+                <div class="l-section__wrapper">
+                    <div class="l-features-wrapper">
+                    <div class="feature">
+                        <h2 class="feature__title">Contact us</h2>
+                        <div class="contact__item">
+                            <img src="img/icons/location.png" alt="">
+                            <p>55 Main St.<br>
+                                Toronto, ON<br>
+                                M1H 3A5</p>
+                        </div>
+                        <div class="contact__item">
+                            <img src="img/icons/iphone.png" alt="">
+                            <p>(416) 555-5252</p>
+                        </div>
+                        <div class="contact__item">
+                            <img src="img/icons/email.png" alt="">
+                            <p>hello@treehouse.com</p>
+                        </div>
                     </div>
-                    <div class="contact__item">
-                        <img src="img/icons/iphone.png" alt="">
-                        <p>(416) 555-5252</p>
+                    <div class="feature">
+                        <h2 class="feature__title">Latest posts</h2>
+                        <div class="posts__item">
+                            <img src="img/icons/news.png" alt="">
+                            <p>Made With Love In Toronto</p>
+                        </div>
+                        <div class="posts__item">
+                            <img src="img/icons/photo.png" alt="">
+                            <p>Startup News & Emerging Tech</p>
+                        </div>
+                        <div class="posts__item">
+                            <img src="img/icons/news.png" alt="">
+                            <p>Bitcoin Will Soon Rule The World</p>
+                        </div>
+                        <div class="posts__item">
+                            <img src="img/icons/news.png" alt="">
+                            <p>Wearable Technology On The Rise</p>
+                        </div>
+                        <div class="posts__item">
+                            <img src="img/icons/media.png" alt="">
+                            <p>Learn Web Design In 30 Days!</p>
+                        </div>
                     </div>
-                    <div class="contact__item">
-                        <img src="img/icons/email.png" alt="">
-                        <p>hello@treehouse.com</p>
+                    <div class="feature">
+                        <h2 class="feature__title">Latest tweets</h2>
+                        <div class="tweets__item">
+                            <img src="img/icons/twitter.png" alt="">
+
+                        </div>
                     </div>
-                </div>
-                <div class="links__posts">
-                    <h2 class="posts__header">Latest posts</h2>
-                    <div class="posts__item">
-                        <img src="img/icons/news.png" alt="">
-                        <p>Made With Love In Toronto</p>
-                    </div>
-                    <div class="posts__item">
-                        <img src="img/icons/photo.png" alt="">
-                        <p>Startup News & Emerging Tech</p>
-                    </div>
-                    <div class="posts__item">
-                        <img src="img/icons/news.png" alt="">
-                        <p>Bitcoin Will Soon Rule The World</p>
-                    </div>
-                    <div class="posts__item">
-                        <img src="img/icons/news.png" alt="">
-                        <p>Wearable Technology On The Rise</p>
-                    </div>
-                    <div class="posts__item">
-                        <img src="img/icons/media.png" alt="">
-                        <p>Learn Web Design In 30 Days!</p>
-                    </div>
-                </div>
-                <div class="links__tweets">
-                    <h2 class="tweets__header">Latest tweets</h2>
-                    <div class="tweets__item">
-                        <img src="img/icons/twitter.png" alt="">
-                        
                     </div>
                 </div>
             </section>
-            <section class="socials">
+            <section class="l-section">
                 <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
                 <div class="socials__icons">
                     <img src="img/socials/twitter.png" alt="twitter">
