--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <main>
         <section class="l-section l-section--banner">
             <div class="l-section__content-wrapper">
-                <h2 class="heading__title heading__title--large heading__title--white">Creative Digital Solutions</h2>
+                <h2 class="heading__title heading__title--large heading__title--white">Creative Digital<br> Solutions</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure. </p>
                 <button type="button" class="banner__button button">View Portfolio</button>
             </div>
