Set background color for values section

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
         </section>
             
-        <section class="l-section">
+        <section class="l-section l-section--shade">
             <div class="l-section__content-wrapper">
                 <h2 class="heading__title">Culture & values</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat cure. </p>
