Change name of section backgrounds modifiers

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
         </section>
             
-        <section class="l-section l-section--shade">
+        <section class="l-section l-section--background_light">
             <div class="l-section__content-wrapper">
                 <h2 class="heading__title">Culture & values</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat cure. </p>
@@ -180,7 +180,7 @@
             </blockquote>
         </section>
             
-        <section class="l-section l-section--contact">
+        <section class="l-section l-section--background_green">
             <h2 class="heading__title heading__title--white">Ready to talk about your next project?</h2>
             <button type="button" class="button--rectangle">Contact us</button>
         </section>
@@ -193,7 +193,7 @@
         </section>
         </main>
         <footer>
-            <section class="l-section l-section--top-footer">
+            <section class="l-section l-section--background_dark">
                     <div class="l-features-wrapper">
                     <div class="feature">
                         <h2 class="feature__title">Contact us</h2>
