Add wrapper to services section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </section>
         
         <section class="l-section">
+            <div class="l-section__content-wrapper">
             <div class="heading">  
                 <h2 class="heading__title">Professional Services</h2>
                 <p class="heading__subtitle">Proin iaculis purus consequat sem cure</p>
@@ -89,6 +90,7 @@
                         digni ssim. Donec porttitora entum suscipit<br>
                         aenean rhoncus posuere odio in tincidunt.</p>
                 </div>
+            </div>
             </div>
         </section>
         
