--- a/index.html
+++ b/index.html
@@ -94,16 +94,18 @@
             </div>
         </section>
         
-        <section class="l-section">
-            <h2 class="heading__title">Just relax & <br> let us do the heavy lifting</h2>
-            <p class="heading__subtitle heading__subtitle--small">Proin iaculis purus consequat sem cure  digni ssim. Donec<br>
-            porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
-            <ul class="list">
-                <li class="list__item">Initial Setup & Customizations</li>
-                <li class="list__item">Regular Updates</li>
-                <li class="list__item">Round The Clock Support</li>
-            </ul>
-            <button type="button" class="offer__button button">Learn More</button>
+        <section class="l-section l-section--offer">
+            <div class="l-section__content-wrapper">
+                <h2 class="heading__title heading__title--white">Just relax & <br> let us do the heavy lifting</h2>
+                <p class="heading__subtitle heading__subtitle--small">Proin iaculis purus consequat sem cure  digni ssim. Donec<br>
+                porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
+                <ul class="list">
+                    <li class="list__item">Initial Setup & Customizations</li>
+                    <li class="list__item">Regular Updates</li>
+                    <li class="list__item">Round The Clock Support</li>
+                </ul>
+                <button type="button" class="offer__button button">Learn More</button>
+            </div>
         </section>
         
         <section class="l-section">
