--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         
         <section class="l-section l-section--offer">
             <div class="l-section__content-wrapper">
-                <h2 class="heading__title heading__title--white">Just relax & <br> let us do the heavy lifting</h2>
+                <h2 class="heading__title heading__title--white">Just relax <span class="green-text">&</span> <br> let us do the heavy lifting</h2>
                 <p class="heading__subtitle heading__subtitle--small">Proin iaculis purus consequat sem cure  digni ssim. Donec<br>
                 porttitora entum suscipit  aenean rhoncus posuere odio in tincidunt.</p>
                 <ul class="list">
@@ -129,7 +129,7 @@
                 <p class="project__description">Proin iaculis purus consequat sem cure  digni ssim<br>
                     donec porttitora entum suscipit  aenean rhoncus posuere<br> 
                     odio in tincidunt.</p>
-                <p class="project__link">View Details</p>
+                <p class="project__link"><span class="green-text">View Details -> </span></p>
                 <img src="img/projects/Arrow-Right.png" alt="">
         </section>
             
