--- a/index.html
+++ b/index.html
@@ -173,15 +173,15 @@
         <section class="l-section">
             <h2 class="heading__title">Our Awesome Clients</h2>
             <p class="heading__subtitle">Proin iaculis purus consequat sem cure. </p>
-            <blockquote>
-            <p>Proin iaculis purus consequat sem cure  digni ssim <br>
+            <blockquote class="quotation">
+                <p class="quotation__text">Proin iaculis purus consequat sem cure  digni ssim
                 donec porttitora entum suscipit aenean rhoncus.</p>
-            <footer>- Jamie Richardson, Founder of Cocoa Media</footer>
+                <footer class="quotation__author">- Jamie Richardson, Founder of Cocoa Media</footer>
             </blockquote>
-            <blockquote>
-            <p>Proin iaculis purus consequat sem cure  digni ssim <br>
+            <blockquote class="quotation">
+            <p class="quotation__text">Proin iaculis purus consequat sem cure  digni ssim
                 donec porttitora entum suscipit aenean rhoncus.</p>
-            <footer>- Kim Thompson, Founder of Rainel</footer>
+            <footer class="quotation__author">- Kim Thompson, Founder of Rainel</footer>
             </blockquote>
         </section>
             
