Style quotation box

--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
             <blockquote class="quotation">
                 <p class="quotation__text">Proin iaculis purus consequat sem cure  digni ssim
                 donec porttitora entum suscipit aenean rhoncus.</p>
-                <footer class="quotation__author">- Jamie Richardson, Founder of Cocoa Media</footer>
+                <footer class="quotation__author green-text">- Jamie Richardson, Founder of Cocoa Media</footer>
             </blockquote>
             <blockquote class="quotation">
             <p class="quotation__text">Proin iaculis purus consequat sem cure  digni ssim
                 donec porttitora entum suscipit aenean rhoncus.</p>
-            <footer class="quotation__author">- Kim Thompson, Founder of Rainel</footer>
+            <footer class="quotation__author green-text">- Kim Thompson, Founder of Rainel</footer>
             </blockquote>
         </section>
             
