Style qutations for mobile

--- a/index.html
+++ b/index.html
@@ -173,16 +173,22 @@
         <section class="l-section">
             <h2 class="heading__title">Our Awesome Clients</h2>
             <p class="heading__subtitle">Proin iaculis purus consequat sem cure. </p>
-            <blockquote class="quotation">
-                <p class="quotation__text">Proin iaculis purus consequat sem cure  digni ssim
-                donec porttitora entum suscipit aenean rhoncus.</p>
-                <footer class="quotation__author green-text">- Jamie Richardson, Founder of Cocoa Media</footer>
-            </blockquote>
-            <blockquote class="quotation">
-            <p class="quotation__text">Proin iaculis purus consequat sem cure  digni ssim
-                donec porttitora entum suscipit aenean rhoncus.</p>
-            <footer class="quotation__author green-text">- Kim Thompson, Founder of Rainel</footer>
-            </blockquote>
+            <div class="opinion">
+                <div class="opinion__picture"></div>
+                <blockquote class="opinion__quotation">
+                    <p class="opinion__text">Proin iaculis purus consequat sem cure  digni ssim
+                    donec porttitora entum suscipit aenean rhoncus.</p>
+                    <footer class="opinion__author green-text">- Jamie Richardson, Founder of Cocoa Media</footer>
+                </blockquote>
+            </div>
+            <div class="opinion">
+                <div class="opinion__picture"></div>
+                <blockquote class="opinion__quotation">
+                <p class="opinion__text">Proin iaculis purus consequat sem cure  digni ssim
+                    donec porttitora entum suscipit aenean rhoncus.</p>
+                <footer class="opinion__author green-text">- Kim Thompson, Founder of Rainel</footer>
+                </blockquote>
+            </div>
         </section>
             
         <section class="l-section l-section--background_green">
