Add content wrapper

--- a/index.html
+++ b/index.html
@@ -201,14 +201,17 @@
         </section>
             
         <section class="l-section">
+            <div class="l-section__content-wrapper">
                 <a href="#" title="envato"><img src="img/partners/envato.png" alt="envato"></a>
                 <a href="#" title="WordPress"><img src="img/partners/wordpress.png" alt="WordPress"></a>
                 <a href="#" title="ae tuts+"><img src="img/partners/tuts.png" alt="ae tuts+"></a>
                 <a href="#" title="microlancer"><img src="img/partners/microlancer.png" alt="microlancer"></a>
+            </div>
         </section>
         </main>
         <footer>
             <section class="l-section l-section--background_dark">
+            <div class="l-section__content-wrapper">
                     <div class="l-features-wrapper">
                     <div class="feature">
                         <h2 class="feature__title">Contact us</h2>
@@ -258,6 +261,7 @@
                         </div>
                     </div>
                     </div>
+                </div>
             </section>
             <section class="l-section">
                 <div class="socials__copyright">© Copyright 2014 FreebiesXpress.com</div>
