Style circle around feature icon

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
                 <div class="l-features-wrapper">
                     <div class="feature">
                         <div class="feature__icon">
+                            <div class="feature__icon-circle">
                             <img src="img/values/icon-music.svg" alt="">
+                            </div>
                         </div>
                         <h3 class="feature__title">Work-life Balance</h3>
                         <p class="feature__description">Proin iaculis purus consequat sem cure<br> 
@@ -150,7 +152,9 @@
                     </div>
                     <div class="feature">
                         <div class="feature__icon">
+                            <div class="feature__icon-circle">
                             <img src="img/values/icon-graph.svg" alt="">
+                            </div>
                         </div>
                         <h3 class="feature__title">Quality Over Quantity</h3>
                         <p class="feature__description">Proin iaculis purus consequat sem cure<br> 
@@ -159,7 +163,9 @@
                     </div>
                     <div class="feature">
                         <div class="feature__icon">
+                            <div class="feature__icon-circle">
                             <img src="img/values/icon-star.svg" alt="">
+                            </div>
                         </div>
                         <h3 class="feature__title">Deliver Excelence</h3>
                         <p class="feature__description">Proin iaculis purus consequat sem cure <br>
