Style lines between feature circles

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
                     <div class="feature">
                         <div class="feature__icon">
-                            <div class="feature__icon-circle">
+                            <div class="feature__icon-circle feature__icon-circle--last">
                             <img src="img/values/icon-star.svg" alt="">
                             </div>
                         </div>
